name:                binsm
version:             0.1
synopsis:            binary files splitter and merger
description:         binary files splitter and merger, makes working with offsets in your shell less painful
homepage:            https://github.com/l29ah/binsm
license:             OtherLicense
license-file:        LICENSE
author:              Sergey Alirzaev
maintainer:          zl29ah@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
Tested-With:         GHC == 8.6.5

executable binsm
  main-is:             binsm.hs
  build-depends:       base >=4.9 && <4.13, parsec >=3.1 && <3.2, bytestring >= 0.10 && < 0.11, optparse-applicative >= 0.13.0.0 && < 0.15, ansi-wl-pprint >= 0.6.7.3 && < 0.7
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs
  other-modules:       Maps
